<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/white"
        android:gravity="center">

        <!-- Título del diálogo -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agregar_reto"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginBottom="16dp" />

        <!-- Caja de texto -->
        <EditText
            android:id="@+id/etChallenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/escriba_el_reto"
            android:backgroundTint="@color/orange"
            android:layout_marginBottom="16dp"
            android:autofillHints="freeform"
            android:inputType="text"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <!-- Botones -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:textColor="@color/white"
                android:backgroundTint="@color/orange" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:textColor="@color/white"
                android:backgroundTint="@color/gray"
                android:enabled="false"
                android:layout_marginStart="16dp" />
        </LinearLayout>
    </LinearLayout>
</layout>