<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/white"
        android:gravity="center">

        <!-- Título del diálogo -->
        <TextView
            android:id="@+id/tvEditTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editar_reto"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginBottom="16dp" />

        <!-- Caja de texto con la descripción del reto -->
        <EditText
            android:id="@+id/etChallenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:layout_marginBottom="16dp"
            android:inputType="text"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:hint="@string/editar_reto_descripcion"/>

        <!-- Botones Cancelar y Guardar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <!-- Botón Cancelar -->
            <Button
                android:id="@+id/btnEditCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:textColor="@color/white"
                android:backgroundTint="@color/orange" />

            <!-- Botón Guardar -->
            <Button
                android:id="@+id/btnEditSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:textColor="@color/white"
                android:backgroundTint="@color/orange"
                android:layout_marginStart="16dp" />
        </LinearLayout>
    </LinearLayout>
</layout>
