<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:padding="16dp"
        tools:context=".view.LoginActivity">

        <!-- Título -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pico_botella"
            android:textColor="#FF3D00"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="16dp" />

        <!-- Campo de Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@android:color/white"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@android:color/white"
                android:maxLength="40"
                android:textColor="@android:color/white"
                android:padding="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo de Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tilEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@android:color/white"
            app:endIconMode="password_toggle"
            android:layout_marginTop="20dp"
            app:endIconTint="@android:color/white"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="numberPassword"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:maxLength="10"
                android:padding="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botón Login -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:backgroundTint="#FF3D00"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@id/tilPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="30dp" />


        <!-- Texto Registrarse -->
        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="39dp"
            android:text="@string/registrarse"
            android:textColor="#9EA1A1"
            android:textStyle="bold"
            android:clickable="true"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Ondas en la parte inferior -->
        <View
            android:id="@+id/bottomWaves"
            android:layout_width="451dp"
            android:layout_height="251dp"
            android:background="@drawable/waves_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
